k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-sandbox
  labels:
    app.kubernetes.io/name: code-sandbox
spec:
  selector:
    app.kubernetes.io/name: code-sandbox
  ports:
    - name: http
      port: 32004
      targetPort: http
