k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-sandbox
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 21m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "5"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "40"
spec:
  ingressClassName: nginx
  rules:
    - host: code-sandbox.internal.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-sandbox
                port:
                  number: 32004
